Finalizando post api e validacoes

--- a/desktop/src/main/java/view/Vendas.form
+++ b/desktop/src/main/java/view/Vendas.form
@@ -252,6 +252,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tfValorTotalPedido">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfValorTotalPedidoActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel7">
           <Properties>
